nueva presentacion del proyect

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Alchemysoul</title>
+  <title>Frank Muñoz valverde</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://gen-react30.vercel.app/assets/rojo-380efc65.png">
+<!-- Te saludo señor que roba codigo haga sus propias cosas
+	mejor contrateme y le hago unos diseños bien buenos pague tacañ@
+linked: https://www.linkedin.com/in/franklim-mu%C3%B1oz-valverde-650161209/
+-->
+	<!-- CSS -->
+	<script src="https://cdn.tailwindcss.com"></script>
+	<link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="./assets/css/flexslider.css" rel="stylesheet" type="text/css" />
+	<link href="./assets/css/prettyPhoto.css" rel="stylesheet" type="text/css" />
+	<link href="./assets/css/animate.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/owl.carousel.css" rel="stylesheet">
+	<link href="./assets/css/style.css" rel="stylesheet" type="text/css" />
+    <!-- Te saludo señor que roba codigo haga sus propias cosas
+	mejor contrateme y le hago unos diseños bien buenos pague tacañ@
+linked: https://www.linkedin.com/in/franklim-mu%C3%B1oz-valverde-650161209/
+-->
+	<!-- FONTS -->
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500italic,700,500,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">	
+    
+	<!-- SCRIPTS -->
+	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+    <!--[if IE]><html class="ie" lang="en"> <![endif]-->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+	<script src="./assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="./assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery.prettyPhoto.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery.nicescroll.min.js" type="text/javascript"></script>
+	<script src="./assets/js/superfish.min.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery.flexslider-min.js" type="text/javascript"></script>
+	<script src="./assets/js/owl.carousel.js" type="text/javascript"></script>
+	<script src="./assets/js/animate.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery.BlackAndWhite.js"></script>
+	<script src="./assets/js/myscript.js" type="text/javascript"></script>
+	<script>
+		
+		
+		//PrettyPhoto
+		jQuery(document).ready(function() {
+			$("a[rel^='prettyPhoto']").prettyPhoto();
+		});
+		//BlackAndWhite
+		$(window).load(function(){
+			 
+			$('.client_img').BlackAndWhite({
+				hoverEffect : true, // default true
+				// set the path to BnWWorker.js for a superfast implementation
+				webworkerPath : false,
+				// for the images with a fluid width and height 
+				responsive:true,
+				// to invert the hover effect
+				invertHoverEffect: false,
+				// this option works only on the modern browsers ( on IE lower than 9 it remains always 1)
+				intensity:1,
+				speed: { //this property could also be just speed: value for both fadeIn and fadeOut
+					fadeIn: 300, // 200ms for fadeIn animations
+					fadeOut: 300 // 800ms for fadeOut animations
+				},
+				onImageReady:function(img) {
+					// this callback gets executed anytime an image is converted
+				}
+			});
+
+			$('.list').each(function() {
+				$(this).on('click', function() {
+					$('.list').removeClass('active'); // Remueve la clase 'active' de todos los elementos con la clase 'list'
+					$(this).addClass('active'); // Agrega la clase 'active' solo al elemento que fue clickeado
+				});
+			});
+		});
+		
+		
+	</script>
+	
 </head>
 <body>
+
   <app-root></app-root>
 </body>
 </html>
